--- a/scss/style.scss
+++ b/scss/style.scss
@@ -229,7 +229,7 @@ $myFont: "Roboto", sans-serif;
       }
 
       &__back {
-        padding-top: 30%;
+        padding-top: 35%;
         overflow: hidden;
 
         &__text {
@@ -277,6 +277,7 @@ $myFont: "Roboto", sans-serif;
       }
       .card__toggler {
         top: 70px;
+        padding: 15px;
       }
       .responsiveCard__front__imageWrapper {
         width: 17%;
